@@ -18,8 +18,6 @@ In 2024 (probably around August), we are planning the release of bitarray 3.0.
 The 3.0 release will:
 
 * Remove Python 2.7 support.
-* Rename ``.itersearch()`` to ``.search()`` and ``.iterdecode()``
-  to ``.decode()`` (and remove their non-iterator counterpart).
 * Remove hackish support for ``bitarray()`` handling unpickling,
   see detailed explaination in `#207 <https://github.com/ilanschnell/bitarray/pull/207>`__.  This will close `#206 <https://github.com/ilanschnell/bitarray/issues/206>`__.
 
