@@ -4,6 +4,7 @@
   * remove `util.rindex()`, use `.index(..., right=1)` instead
   * remove `util.make_endian()`, use `bitarray(..., endian=...)` instead
   * rename `.itersearch()` -> `.search()` (and remove `.search()`)
+  * rename `.iterdecode()` -> `.decode()` (and remove `.decode()`)
   * update cibuildwheel to 2.18.0
   * minor simplifications
   * fix some typos
